--- a/main.css
+++ b/main.css
@@ -11,10 +11,56 @@ img.centered {
 }
 
 header {
-    padding: 4rem 0;
+    margin: 0;
+}
+
+nav {
+    background: white;
+    width: 100%;
+    height: 4rem;
+    line-height: 4rem;
+    padding: 0 2rem;
+}
+
+nav h1 {
+    float: left;
+    display: inline-block;
+    line-height: 4rem;
+    vertical-align: middle;
+    font-size: 1.5rem;
+    font-weight: bolder;
+}
+
+nav ul {
+    float: right;
+}
+
+nav ul li {
+    display: inline-block;
+    font-size: 0.8rem;
+    font-weight: bolder;
+}
+
+nav ul li a {
+    padding: 0 2rem;
+    color: #333;
+    text-transform: uppercase;
+}
+
+nav ul li a:hover {
+    color: #329996;
+}
+
+nav ul li a.active {
+    border-top: 4px solid #329996;
+}
+
+#cover {
     background-color: #329996;
     color: white;
+    padding: 4rem;
 }
+
 
 #content {
     padding-top: 2rem;
