--- a/main.css
+++ b/main.css
@@ -1,6 +1,38 @@
-html {
+* {
+    margin: 0;
+    padding: 0;
 }
 
+/*contribution css code start*/
+.logo-text a:hover{
+    text-decoration: none;
+}
+
+.logo-text-link:hover {
+    background-color: #329996;
+    color: white;
+    outline: 12px solid #329996;
+    transition: all .5s;
+}
+
+
+
+.btn-con:hover {
+    transform: translateY(-4px);
+    box-shadow:
+    0px 10px 20px rgba(0,0,0,.3);
+    transition: all .2s;
+}
+
+
+
+
+
+
+
+
+
+/*contribution css code end*/
 img {
     max-width: 100%;
 }
